<resources>
    <string name="app_name">DDL管理</string>
    <string name="action_settings">设置</string>
    <string name="first_fragment_label">截止日期列表</string>
    <string name="second_fragment_label">添加截止日期</string>
    <string name="next">下一步</string>
    <string name="previous">返回</string>
    <string name="select_major">选择专业</string>
    <string name="no_deadlines">暂无截止日期</string>
    <string name="add_deadline">添加截止日期</string>
    <string name="remaining_time">剩余时间: %1$d天%2$d小时</string>
    <string name="deadline_title">标题</string>
    <string name="deadline_description">描述</string>
    <string name="deadline_date">选择截止日期</string>
    <string name="save">保存</string>
</resources>